# qic

./: .backend-health-url  .gitignore  .gitmodules  .tickets-done  CLAUDE.md  FEATURES.md  FEATURE_STATUS.md  IMPLEMENTATION_GAP.md  NEW_FEATURES.md  README.md  REWRITE_PLAN.md  SYSTEM_ANALYSIS.md  TESTING-TRIAGE-2026-03-10.md  commit-all.sh  fee-audit-report.html  git-commit.md  ticket-dependencies.json
twolebot-main/twolebot-main/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  clean_build.sh  compile.sh  elm-build.sh  elm-watch.sh  install.sh  start-all.sh  tarpaulin.toml  yolo-restart.sh
twolebot-main/twolebot-main/.github/workflows/: release.yml  tests.yml
twolebot-main/twolebot-main/data/topics/: CLAUDE.md
twolebot-main/twolebot-main/docs/: mcp-configuration-guide.md  mcp-lessons-learned.md  software-development-philosophy.md  task-system-ux-improvements.md
twolebot-main/twolebot-main/frontend/: elm.json  index.html
twolebot-main/twolebot-main/frontend/elm-pkg-js/: chat-ws.js  file-attachment.js  qr-svg.js  ui-helpers.js  video-recording.js  voice-recording.js
twolebot-main/twolebot-main/frontend/src/: Api.elm  Main.elm  Types.elm  UI.elm
twolebot-main/twolebot-main/monitor-rust/: .gitignore  Cargo.toml
twolebot-main/twolebot-main/monitor-rust/proptest-regressions/: message_splitter.txt
twolebot-main/twolebot-main/monitor-rust/src/: lib.rs  main.rs  message_splitter.rs
twolebot-main/twolebot-main/proptest-regressions/claude/: stream.txt
twolebot-main/twolebot-main/proptest-regressions/semantic/: chunker.txt
twolebot-main/twolebot-main/proptest-regressions/work/: service.txt
twolebot-main/twolebot-main/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  tunnel.rs  types.rs
twolebot-main/twolebot-main/src/claude/: codex_stream.rs  harness.rs  manager.rs  mod.rs  process.rs  stream.rs  topics_claude_md.rs  topics_claude_md.txt
twolebot-main/twolebot-main/src/cron/: activity_tracker.rs  feed.rs  gatekeeper.rs  mod.rs  scheduler.rs  service.rs  types.rs
twolebot-main/twolebot-main/src/dispatcher/: mod.rs  response.rs
twolebot-main/twolebot-main/src/mcp/: conversation_tools.rs  image_tools.rs  memory_tools.rs  mod.rs  send_tools.rs  server.rs  tools.rs  work_tools.rs
twolebot-main/twolebot-main/src/rendering/: markdown.rs  (+3 more)
twolebot-main/twolebot-main/tests/: architecture_compile_fail.rs  config_secrets_db.rs  e2e_flow.rs  general_db_work_unification.rs  mcp_contract.rs  mcp_integration.rs  messages_runtime_db_e2e.rs  runtime_db_unification.rs  security_tests.proptest-regressions  security_tests.rs  spawned_claude_mcp.rs  work_autowork_policy.rs
(+172 files in other folders)
