[package]
name = "twolebot"
version = "0.1.0"
edition = "2021"
description = "Telegram bot with Claude integration"

[[bin]]
name = "twolebot"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal"] }

# HTTP client/server
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "multipart"], default-features = false }
axum = { version = "0.7", features = ["tokio", "json", "ws"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Time and date
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
bytes = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }
dirs = "5"
open = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# File watching
notify = "6"
tokio-util = { version = "0.7.18", features = ["io"] }

# Cron scheduling
cron = "0.15"

# MCP server
rmcp = { version = "0.14", features = ["server", "transport-io", "transport-streamable-http-server"] }
schemars = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-core = "0.3"
futures-util = "0.3"

# Directory traversal and search
walkdir = "2"
regex = "1"

# Semantic search / embeddings
fastembed = "4"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

# Work module (SQLite connection pool + SSE)
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# QR code generation (for tunnel login)
qrcode = "0.14"

[features]
default = []
spawn-tests = []  # Gate heavy integration tests that spawn Claude processes

[[test]]
name = "spawned_claude_mcp"
required-features = ["spawn-tests"]

[dev-dependencies]
proptest = "1.0"
tempfile = "3"
trybuild = "1"
tower = "0.5"
rmcp = { version = "0.14", features = ["client", "transport-io"] }
