[package]
name = "monitor-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rxrust = "1.0.0-beta.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
urlencoding = "2.1"
hostname = "0.3"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
proptest = "1.0"